--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,7 @@
             android:name=".StudentsListViewActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".StudentDetailActivity"
+            android:exported="true"/>
     </application>
 </manifest>
