--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,9 @@
             android:name=".StudentsListViewActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".AddStudentActivity"
+            android:exported="true">
+        </activity>
     </application>
 </manifest>
